all label replace with badge, tree structure spacing, fix primary button issue

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -89,9 +89,6 @@ small {
   font-feature-settings : "smcp" 1,"calt" 0;
 }
 
-/*.badge {
- background-color: #A19FA0;
-}*/
 
 /*.pagination ul > li > span {
   float: left;
