--- a/app/assets/stylesheets/read.css.scss
+++ b/app/assets/stylesheets/read.css.scss
@@ -453,3 +453,11 @@
 .go-top:hover {
   background-color: rgba(0, 0, 0, 0.6);
 }
+
+
+.btn-primary {
+  color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background: #006dcc !important;
+  border-radius: 0px !important;
+}
